2008-03-07  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Gui/MessageService.cs: Make message service
	  GUI-thread safe again for methods with no return value, and add GUI
	  thread asserts to the unsafe methods.

2008-03-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp,
	  MonoDevelop.Core.Gui.Dialogs/OptionsDialog.cs,
	  MonoDevelop.Core.Gui.Dialogs/OptionsPanel.cs,
	  MonoDevelop.Core.Gui.Dialogs/IOptionsPanel.cs,
	  MonoDevelop.Core.Gui.Codons/OptionsDialogSection.cs,
	  MonoDevelop.Core.Gui.Codons/OptionsPanelNode.cs,
	  gtk-gui/MonoDevelop.Core.Gui.Dialogs.OptionsDialog.cs,
	  gtk-gui/generated.cs, gtk-gui/gui.stetic, Makefile.am,
	  icons/pad-task-list-24.png, MonoDevelop.Core.Gui.addin.xml:
	  Implemented new options dialog.

2008-03-05  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Gui/PlatformService.cs: Add XAML to mimetypes list.

2008-03-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core.Gui/MessageService.cs: Added gui sync object to the
	  showdialog.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core.Gui/MessageService.cs: Fixed some dialogs for hig
	  compliance.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core.Gui.mdp,
	  MonoDevelop.Core.Gui.Dialogs/AbstractOptionPanel.cs,
	  MonoDevelop.Core.Gui.Components/FileBrowser.cs,
	  MonoDevelop.Core.Gui/IMessageService.cs,
	  MonoDevelop.Core.Gui/AlertDialog.cs,
	  MonoDevelop.Core.Gui/MessageService.cs,
	  MonoDevelop.Core.Gui/GuiService.cs,
	  gtk-gui/MonoDevelop.Core.Gui.Dialogs.MultiTaskProgressDialog.cs,
	  Makefile.am,
	  MonoDevelop.Core.Gui.ProgressMonitoring/MessageDialogProgressMonitor.cs,
	  MonoDevelop.Core.Gui.ProgressMonitoring/MultiTaskDialogProgressMonitor.cs:
	  Worked on gnome hig compliant alerts.

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core.Gui.Components/FileBrowser.cs: Added missing shortcut
	  strings

2008-02-25  Geoff Norton  <gnorton@novell.com>