@@ -1,3 +1,7 @@
+2008-03-10  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Core.Gui/MessageService.cs: Added confirm method.
+
 2008-03-07  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.Core.Gui/MessageService.cs: Make message service
